
SVN
-------------------------------

XML:   Resolved issue CASTOR-1335 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with code generated for <xsd:choice> elements with primitive and Object types mixed.
       Details: http://jira.codehaus.org/browse/CASTOR-1335
       (Werner - 20061001)

XML:   Resolved issue CASTOR-1595 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Refactored SourceGenerator class, moving parts to separate code artefacts.
       Details: http://jira.codehaus.org/browse/CASTOR-1595
       (Werner - 20061001)

XML:   Resolved issue CASTOR-1585 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added property to disable selected features on SAX2 parser used internally by Castor XML.
       Details: http://jira.codehaus.org/browse/CASTOR-1585
       (Werner - 20060930)

XML:   Resolved issue CASTOR-1596 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Expanded JMethod.addException() to correctly insert @throws Javadoc.
       Details: http://jira.codehaus.org/browse/CASTOR-1596
       (Werner - 20060930)

XML:   Resolved issue CASTOR-1594 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Added regression test for CASTOR-1580 to CTF regression suite.
       Details: http://jira.codehaus.org/browse/CASTOR-1594
       (Werner - 20060930)

XML:   Resolved issue CASTOR-1589 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Fixed ComplexType-DirectAccess test complaining about differences.
       Details: http://jira.codehaus.org/browse/CASTOR-1589
       (Ralf - 20060930)

XML:   Resolved issue CASTOR-1590 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Source code cleanup at Castor XML test framework.
       Details: http://jira.codehaus.org/browse/CASTOR-1590
       (Ralf - 20060929)

XML:   Resolved issue CASTOR-1588 using contribution from Edward Kuns [edward.kuns@aspect.com]